--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "neky-err",
+  "name": "neky-report",
   "version": "1.0.1",
-  "description": "前端异常捕捉",
+  "description": "前端无痕埋点，用户行为监控，访客识别，UAT方案。",
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/suguangwen/neky-err.git"
+    "url": "git+https://github.com/suguangwen/neky-report.git"
   },
   "author": "suguangwen",
   "license": "MIT"
